--- a/Root/css/main.css
+++ b/Root/css/main.css
@@ -354,6 +354,11 @@ footer{
     background-size: cover;
 }
 
+.banner{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
 
 @media screen and (max-width: 1024px) {
     .nav-list{
